# json-steroids

./: Cargo.toml  README.md
benches/: benchmarks.rs
examples/: README.md  prof_deserialize_complex.rs  prof_deserialize_simple.rs  prof_parse_dynamic.rs  prof_realistic_api.rs  prof_roundtrip_complex.rs  prof_serialize_complex.rs  prof_serialize_large_array.rs  prof_serialize_simple.rs  prof_serialize_string_escapes.rs  prof_writer_manual.rs
json-steroids-derive/: Cargo.toml
json-steroids-derive/src/: lib.rs
src/: error.rs  lib.rs  parser.rs  traits.rs  value.rs  writer.rs
tests/: integration.rs  profiling.rs
