[workspace]
members = [
    "json-steroids-derive",
]

[package]
name = "json-steroids"
version = "0.1.0"
edition = "2021"

[dependencies]
json-steroids-derive = { path = "./json-steroids-derive" }
itoa = "1.0"
ryu = "1.0"

[dev-dependencies]
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "benchmarks"
harness = false
