[workspace]
members = [
    "json-steroids-derive",
]

[package]
name = "json-steroids"
version = "0.1.0"
edition = "2021"
description = "Blazing fast JSON serialization and deserialization library, powered by procedural macros."
license = "MIT"

[dependencies]
json-steroids-derive = { path = "./json-steroids-derive", version = "0.1.0"}
itoa = "1.0"
ryu = "1.0"

[dev-dependencies]
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "benchmarks"
harness = false
