[package]
name = "json-steroids-derive"
version = "0.1.2"
edition = "2021"
description = "Macro crate for json-steroids, providing procedural macros for blazing fast JSON serialization and deserialization."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro-crate = "3.0"
